# Allamvizsga

MyApplication/app/: build.gradle
MyApplication/app/jni/: Android.mk  nonfree_jni.cpp
MyApplication/app/src/androidTest/java/com/biro/zsolt/android/myapplication/: ExampleInstrumentedTest.java
MyApplication/app/src/main/: AndroidManifest.xml
MyApplication/app/src/main/java/com/biro/zsolt/android/myapplication/: MainActivity.java  NonfreeJNILib.java
MyApplication/app/src/main/res/layout/: activity_main.xml  show_camera.xml
MyApplication/app/src/main/res/values/: strings.xml
MyApplication/app/src/test/java/com/biro/zsolt/android/myapplication/: ExampleUnitTest.java
MyApplication/gradle/wrapper/: gradle-wrapper.properties
Project/app/: CMakeLists.txt  build.gradle
Project/app/src/androidTest/java/com/biro/zsolt/android/cardrecognizer/: ExampleInstrumentedTest.java
Project/app/src/main/: AndroidManifest.xml
Project/app/src/main/cpp/: native-lib.cpp  sift-test.cpp
Project/app/src/main/java/com/biro/zsolt/android/cardrecognizer/: CameraPreview.java  Cards.java  Config.java  MainActivity.java
Project/app/src/main/res/layout/: show_camera.xml
Project/app/src/main/res/values/: strings.xml
Project/app/src/test/java/com/biro/zsolt/android/cardrecognizer/: ExampleUnitTest.java
Project/gradle/wrapper/: gradle-wrapper.properties
